--- a/src/assets/css/regist.less
+++ b/src/assets/css/regist.less
@@ -31,7 +31,7 @@ html {
     margin: 50px auto 20px;
     padding: 17px 40px 140px;
     // background: #fff;
-    background-color:  rgba(255, 255, 255, 0.3);
+    background-color:  rgba(255, 255, 255, 0.8);
     box-sizing: border-box;
     margin-bottom: 50px;
 
@@ -40,7 +40,7 @@ html {
     }
 
     /deep/ .el-form-item__label {
-        color: white;
+        color: 333;
         font-size: 16px;
     }
 
