--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -46,7 +46,7 @@
 
 .exit-tips {
   position: absolute;
-  top:40px;
+  top:70px;
   right: 10px;
   color: whitesmoke;
   font-size: 15px;
@@ -86,7 +86,7 @@
         font-size: 16px !important;
         line-height: 60px;
         background-color: lightskyblue !important;
-        border-radius: 13px;
+        border-radius: 8px;
     }
 
     /deep/ .el-aside {
@@ -95,6 +95,10 @@
 }
 
 #exit-img {
+  cursor: pointer;
+}
+
+.right-banner.messageBox {
   cursor: pointer;
 }
 
@@ -112,23 +116,36 @@
   height: 100%;
   display: flex;
   align-items: center;
+  /deep/ .el-drawer.ttb {
+    width: 50%;
+    left: 25%;
+    top: 70px;
+    height: 80% !important;
+  }
 }
+
 
 .vLine {
   border-left: solid 2px #ccc;
   height: 20px;
   vertical-align: middle;
   display: inline-block;
-}
-.right-banner .widget {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
-.right-banner .widget > span {
+.right-banner.widget {
+  cursor: pointer;
+}
+
+.right-banner.widget > span {
   font-size: 17px;
   font-weight: 500;
   min-width: 34px;
+}
+
+#messageBox {
+  cursor: pointer;
 }
 
 .left-banner {
@@ -162,4 +179,12 @@
   .search-box {
     width: 400px
   }
+}
+
+.right-banner.user-region >:first-child {
+  margin-right: 50px;
+}
+
+.right-banner.user-region >:nth-child(2) {
+  margin-right: 60px;
 }
